// Vitest Snapshot v1

exports[`VideoPlayer > when data object > contains \`muxPlaybackId\` > uses it for \`playbackId\` 1`] = `
<body>
  <div>
    <mux-player
      playback-id="ip028MAXF026dU900bKiyNDttjonw7A1dFY"
      stream-type="on-demand"
    />
    <!--&lt;VideoPlayer&gt;-->
  </div>
</body>
`;

exports[`VideoPlayer > when data object > contains \`playbackId\` > uses it for \`playbackId\` 1`] = `
<body>
  <div>
    <mux-player
      playback-id="ip028MAXF026dU900bKiyNDttjonw7A1dFY"
      stream-type="on-demand"
    />
    <!--&lt;VideoPlayer&gt;-->
  </div>
</body>
`;

exports[`VideoPlayer > when data object > is complete > and \`class\` is passed > uses it for the <mux-player /> element 1`] = `
<body>
  <div>
    <mux-player
      class="main-player"
      placeholder="data:image/bmp;base64,Qk0eAAAAAAAAABoAAAAMAAAAAQABAAEAGAAAAP8A"
      playback-id="ip028MAXF026dU900bKiyNDttjonw7A1dFY"
      stream-type="on-demand"
      style="aspect-ratio: 1080 / 1920;"
      title="Title"
    />
    <!--&lt;VideoPlayer&gt;-->
  </div>
</body>
`;

exports[`VideoPlayer > when data object > is complete > and a style string is passed > that defines the aspect ratio property > as a valid CSS value > uses the passed value to override default aspect ratio 1`] = `
<body>
  <div>
    <mux-player
      placeholder="data:image/bmp;base64,Qk0eAAAAAAAAABoAAAAMAAAAAQABAAEAGAAAAP8A"
      playback-id="ip028MAXF026dU900bKiyNDttjonw7A1dFY"
      stream-type="on-demand"
      style="aspect-ratio: auto;"
      title="Title"
    />
    <!--&lt;VideoPlayer&gt;-->
  </div>
</body>
`;

exports[`VideoPlayer > when data object > is complete > and a style string is passed > that doesn't include aspect ratio > adds computed aspect ratio 1`] = `
<body>
  <div>
    <mux-player
      placeholder="data:image/bmp;base64,Qk0eAAAAAAAAABoAAAAMAAAAAQABAAEAGAAAAP8A"
      playback-id="ip028MAXF026dU900bKiyNDttjonw7A1dFY"
      stream-type="on-demand"
      style="aspect-ratio: 1080 / 1920; margin: auto;"
      title="Title"
    />
    <!--&lt;VideoPlayer&gt;-->
  </div>
</body>
`;

exports[`VideoPlayer > when data object > is complete > and an explicitly \`undefined\` style is passed > avoids adding aspect ratio 1`] = `
<body>
  <div>
    <mux-player
      placeholder="data:image/bmp;base64,Qk0eAAAAAAAAABoAAAAMAAAAAQABAAEAGAAAAP8A"
      playback-id="ip028MAXF026dU900bKiyNDttjonw7A1dFY"
      stream-type="on-demand"
      title="Title"
    />
    <!--&lt;VideoPlayer&gt;-->
  </div>
</body>
`;

exports[`VideoPlayer > when data object > is complete > unwraps data into props ready for MUX player 1`] = `
<body>
  <div>
    <mux-player
      placeholder="data:image/bmp;base64,Qk0eAAAAAAAAABoAAAAMAAAAAQABAAEAGAAAAP8A"
      playback-id="ip028MAXF026dU900bKiyNDttjonw7A1dFY"
      stream-type="on-demand"
      style="aspect-ratio: 1080 / 1920;"
      title="Title"
    />
    <!--&lt;VideoPlayer&gt;-->
  </div>
</body>
`;

exports[`VideoPlayer > when data object > lacks of \`title\` value > avoids adding a title 1`] = `
<body>
  <div>
    <mux-player
      playback-id="ip028MAXF026dU900bKiyNDttjonw7A1dFY"
      stream-type="on-demand"
      style="aspect-ratio: 1080 / 1920;"
    />
    <!--&lt;VideoPlayer&gt;-->
  </div>
</body>
`;

exports[`VideoPlayer > when data object > lacks of \`width\` and \`height\` values > avoids adding aspect ratio 1`] = `
<body>
  <div>
    <mux-player
      playback-id="ip028MAXF026dU900bKiyNDttjonw7A1dFY"
      stream-type="on-demand"
      title="Title"
    />
    <!--&lt;VideoPlayer&gt;-->
  </div>
</body>
`;
